Update README.md (#146)
Co-authored-by: Octogonapus <rgbenasutti@wpi.edu>